--- a/_posts/2013-04-07-magento-plugins.html
+++ b/_posts/2013-04-07-magento-plugins.html
@@ -9,12 +9,12 @@ tags : [magento, plugins, installation, comment, anti-spams]
 
 ## 安装插件
 
-- 登录Magento后台
-- 选择System -> Magento Connect -> Magento Connect Manager 进入到插件管理页面
-- 去 [Magent官方插件中心](http://www.magentocommerce.com/magento-connect) 选择你要的插件并得到 Extension Key
-- 将你的Extension Key输入到 Paste extension key to install 里面即可。
+登录Magento后台
+选择System -> Magento Connect -> Magento Connect Manager 进入到插件管理页面
+去 [Magent官方插件中心](http://www.magentocommerce.com/magento-connect) 选择你要的插件并得到 Extension Key
+将你的Extension Key输入到 Paste extension key to install 里面即可。
 
 ## 几个插件
 
-- 限制IP访问的插件 ET_IpSecurity
-- 给表单加入验证码的插件 Fontis_Recaptcha
+限制IP访问的插件 ET_IpSecurity
+给表单加入验证码的插件 Fontis_Recaptcha
