--- a/_posts/2013-04-07-magento-plugins.html
+++ b/_posts/2013-04-07-magento-plugins.html
@@ -7,6 +7,8 @@ tags : [magento, plugins, installation, comment, anti-spams]
 ---
 {% include JB/setup %}
 
+Magento插件安装方法，以及自己用的两个插件名字。
+
 ## 安装插件
 
 登录Magento后台
